--- a/webapp/view/Confirm.view.xml
+++ b/webapp/view/Confirm.view.xml
@@ -1,5 +1,5 @@
 <mvc:View xmlns="sap.m" xmlns:mvc="sap.ui.core.mvc" xmlns:semantic="sap.m.semantic" xmlns:footerbar="sap.ushell.ui.footerbar" xmlns:l="sap.ui.layout" xmlns:f="sap.ui.layout.form" xmlns:core="sap.ui.core" xmlns:html="http://www.w3.org/1999/xhtml" controllerName="CTT.Reabastecimento.controller.Confirm">	
-	<semantic:DetailPage id="page" showNavButton="true" navButtonPress="onNavBack" title="{i18n>detailTitle}" busy="{detailView>/busy}" busyIndicatorDelay="{detailView>/delay}">
+	<semantic:DetailPage id="page" showNavButton="true" navButtonPress="onNavBack" title="{i18n>detailTitle} {ActiveOrder>/Order/Id}" busy="{detailView>/busy}" busyIndicatorDelay="{detailView>/delay}">
 
 		<semantic:content>
 
