--- a/webapp/view/Detail.view.xml
+++ b/webapp/view/Detail.view.xml
@@ -1,6 +1,6 @@
 <mvc:View xmlns="sap.m" xmlns:mvc="sap.ui.core.mvc" xmlns:semantic="sap.m.semantic" xmlns:footerbar="sap.ushell.ui.footerbar" xmlns:l="sap.ui.layout" xmlns:f="sap.ui.layout.form" xmlns:core="sap.ui.core" controllerName="CTT.Reabastecimento.controller.Detail">
 
-	<semantic:DetailPage id="page" showNavButton="{device>/system/phone}" title="{i18n>detailTitle}" busy="{detailView>/busy}" busyIndicatorDelay="{detailView>/delay}" navButtonPress="onNavBack">
+	<semantic:DetailPage id="page" showNavButton="{device>/system/phone}" title="{i18n>detailTitle} {ActiveOrder>/Order/Id}" busy="{detailView>/busy}" busyIndicatorDelay="{detailView>/delay}" navButtonPress="onNavBack">
 
 		<semantic:content>
 
