--- a/webapp/view/Master.view.xml
+++ b/webapp/view/Master.view.xml
@@ -1,6 +1,6 @@
 <mvc:View xmlns:mvc="sap.ui.core.mvc" xmlns:core="sap.ui.core" xmlns="sap.m" xmlns:semantic="sap.m.semantic" controllerName="CTT.Reabastecimento.controller.Master">
 
-	<semantic:MasterPage id="page" title="{masterView>/title}" navButtonPress="onNavBack" showNavButton="true">
+	<semantic:MasterPage id="page" title="{masterView>/title}" navButtonPress="onNavBack" showNavButton="false">
 		<semantic:subHeader>
 			<Bar id="headerBar">
 				<contentMiddle>
